<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QA_1">

    <TextView
        android:id="@+id/questionNumber_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/question" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="320dp"
        android:onClick="Back"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber_textView"
        tools:text="@string/back" />

    <CheckBox
        android:id="@+id/answer_1_checkBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="75dp"
        android:onClick="Checked"
        android:text="@string/variant1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber_textView"
        tools:text="@string/variant1" />

    <CheckBox
        android:id="@+id/answer_2_checkBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:onClick="Checked"
        android:text="@string/variant2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_1_checkBox"
        tools:text="@string/variant2" />

    <CheckBox
        android:id="@+id/answer_3_checkBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:onClick="Checked"
        android:text="@string/variant3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_2_checkBox"
        tools:text="@string/variant3" />

    <CheckBox
        android:id="@+id/answer_4_checkBox"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:onClick="Checked"
        android:text="@string/variant4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_3_checkBox"
        tools:text="@string/variant4" />

    <Button
        android:id="@+id/forward_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:onClick="Forward"
        android:text="@string/forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber_textView"
        tools:text="@string/forward" />

    <TextView
        android:id="@+id/question_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionNumber_textView"
        tools:text="Как вы относитесь к людям?" />

    <Button
        android:id="@+id/return_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:background="@drawable/abc_vector_test"
        android:onClick="Finish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CompleteQuestionaire_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="140dp"
        android:onClick="Computing_answers"
        android:text="@string/complete_questionaire"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        tools:text="@string/complete_questionaire" />
</androidx.constraintlayout.widget.ConstraintLayout>